example/network-policies/http-go-policy-v2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: http-go-policy-v2
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: http-go-v2
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: http-go-v3
